--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Social Solution Services</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <section class="hero"></>
+    <section class="hero"></section>
     <section class="content">
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
